--- a/grid_approximation.Rmd
+++ b/grid_approximation.Rmd
@@ -60,7 +60,8 @@ data=list(W=6,L=3) )
 precis( globe.qa )
 ```
 
-Since we already know the posterior, let’s compare to see how good the approximation is.
+Since we already know the posterior, let's compare to see how good the approximation is.
+
 ```{r}
 # analytical calculation 2.7
 W <- 6
@@ -71,6 +72,7 @@ curve( dnorm( x , 0.67 , 0.16 ) , lty=2 , add=TRUE )
 ```
 
 **Monte Carlo globe tossing example**
+
 ```{r}
 n_samples <- 1000
 p <- rep( NA , n_samples )
@@ -92,18 +94,71 @@ curve( dbeta( x , W+1 , L+1 ) , lty=2 , add=TRUE )
 
 **2.5. Summary**
 
-This chapter introduced the conceptual mechanics of Bayesian data analysis. The target
-of inference in Bayesian inference is a posterior probability distribution. Posterior probabilities state the relative numbers of ways each conjectured cause of the data could have produced the data. These relative numbers indicate plausibilities of the different conjectures. These plausibilities are updated in light of observations through Bayesian updating.
+This chapter introduced the conceptual mechanics of Bayesian data analysis. The target of inference in Bayesian inference is a posterior probability distribution. Posterior probabilities state the relative numbers of ways each conjectured cause of the data could have produced the data. These relative numbers indicate plausibilities of the different conjectures. These plausibilities are updated in light of observations through Bayesian updating.
 
-More mechanically, a Bayesian model is a composite of variables and distributional definitions for these variables. The probability of the data, often called the likelihood, provides
-the plausibility of an observation (data), given a fixed value for the parameters. The prior
-provides the plausibility of each possible value of the parameters, before accounting for the
-data. The rules of probability tell us that the logical way to compute the plausibilities, after
-accounting for the data, is to use Bayes’ theorem. This results in the posterior distribution.
+More mechanically, a Bayesian model is a composite of variables and distributional definitions for these variables. The probability of the data, often called the likelihood, provides the plausibility of an observation (data), given a fixed value for the parameters. The prior provides the plausibility of each possible value of the parameters, before accounting for the data. The rules of probability tell us that the logical way to compute the plausibilities, after accounting for the data, is to use Bayes' theorem. This results in the posterior distribution.
 
-In practice, Bayesian models are fit to data using numerical techniques, like grid approximation, quadratic approximation, and Markov chain Monte Carlo. Each method imposes
-different trade-offs.
+In practice, Bayesian models are fit to data using numerical techniques, like grid approximation, quadratic approximation, and Markov chain Monte Carlo. Each method imposes different trade-offs.
 
 **2.6. Practice**
 
+**2E1.** Which of the expressions below correspond to the statement: *the probability of rain on Monday*?  
+(1) Pr(rain)  
+**(2)** Pr(rain\|Monday)  
+(3) Pr(Monday\|rain)  
+**(4)** Pr(rain, Monday)/ Pr(Monday)
+  
+**Answer:**
+
+**(2)** Pr(rain\|Monday) -- by it's definition (Probability of rain given it's Monday)
+
+**and**
+
+Pr (rain, Monday) = Pr(rain\|Monday) \* Pr(Monday)
+
+This is like saying that the probability of rain **and** Monday is equal to the prob. of rain when it's Monday, times the prob. that it's Monday.
+
+Then, Pr(rain\|Monday) = Pr(rain, Monday) / Pr(Monday) **(4)**
+
+**2E2.** Which of the following statements corresponds to the expression: Pr(Monday\|rain)?  
+(1) The probability of rain on Monday.  
+(2) The probability of rain, given that it is Monday.  
+**(3)** The probability that it is Monday, given that it is raining.  
+(4) The probability that it is Monday and that it is raining.
+
+**Answer:**
+
+**(3)** The probability that it is Monday, given that it is raining.  
+
+**2E3.** Which of the expressions below correspond to the statement: *the probability that it is Monday,  
+given that it is raining*?  
+**(1)** Pr(Monday\|rain)  
+(2) Pr(rain\|Monday)  
+(3) Pr(rain\|Monday) Pr(Monday)  
+**(4)** Pr(rain\|Monday) Pr(Monday)/ Pr(rain)  
+(5) Pr(Monday\|rain) Pr(rain)/ Pr(Monday)
+  
+**Answer:**
+
+**(1)** Pr(Monday\|rain)
+
+Also,
+
+Pr(Monday, rain) = Pr(Monday\|rain) \* Pr(rain) or
+
+Pr(Monday, rain) = Pr(rain\|Monday) \* Pr(Monday)
+
+Then, Pr(Monday\|rain) \* Pr(rain) = Pr(rain\|Monday) \* Pr(Monday)
+
+Pr(Monday\|rain) = Pr(rain\|Monday) \* Pr(Monday) / Pr(rain) **(4)**
+
+**2E4.** The Bayesian statistician Bruno de Finetti (1906–1985) began his 1973 book on probability theory with the declaration: "PROBABILITY DOES NOT EXIST." The capitals appeared in the original,  
+so I imagine de Finetti wanted us to shout this statement. What he meant is that probability is a device for describing uncertainty from the perspective of an observer with limited knowledge; it has no  
+objective reality. Discuss the globe tossing example from the chapter, in light of this statement. What  
+does it mean to say "the probability of water is 0.7"?
+  
+
+
+
+  
 
