--- a/grid_approximation.Rmd
+++ b/grid_approximation.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Chapter 2"
-output: github_document
+output: html_notebook
 ---
 
 ```{r}
@@ -43,7 +43,7 @@ posterior <- unstd.posterior / sum(unstd.posterior)
 
 plot( p_grid , posterior  , type="b" ,
       xlab="probability of water" , ylab="posterior probability" )
-mtext( "100 points" )
+mtext( "20 points" )
 ```
 
 **Quadratic Approximation**
@@ -102,12 +102,14 @@ In practice, Bayesian models are fit to data using numerical techniques, like gr
 
 **2.6. Practice**
 
-**2E1.** Which of the expressions below correspond to the statement: *the probability of rain on Monday*?  
-(1) Pr(rain)  
-**(2)** Pr(rain\|Monday)  
-(3) Pr(Monday\|rain)  
+**2E1.** Which of the expressions below correspond to the statement: *the probability of rain on Monday*?
+
+\(1\) Pr(rain)  
+**(2)** Pr(rain\|Monday)
+
+\(3\) Pr(Monday\|rain)  
 **(4)** Pr(rain, Monday)/ Pr(Monday)
-  
+
 **Answer:**
 
 **(2)** Pr(rain\|Monday) -- by it's definition (Probability of rain given it's Monday)
@@ -120,24 +122,30 @@ This is like saying that the probability of rain **and** Monday is equal to the 
 
 Then, Pr(rain\|Monday) = Pr(rain, Monday) / Pr(Monday) **(4)**
 
-**2E2.** Which of the following statements corresponds to the expression: Pr(Monday\|rain)?  
-(1) The probability of rain on Monday.  
-(2) The probability of rain, given that it is Monday.  
-**(3)** The probability that it is Monday, given that it is raining.  
-(4) The probability that it is Monday and that it is raining.
+**2E2.** Which of the following statements corresponds to the expression: Pr(Monday\|rain)?
+
+\(1\) The probability of rain on Monday.
+
+\(2\) The probability of rain, given that it is Monday.  
+**(3)** The probability that it is Monday, given that it is raining.
+
+\(4\) The probability that it is Monday and that it is raining.
 
 **Answer:**
 
-**(3)** The probability that it is Monday, given that it is raining.  
+**(3)** The probability that it is Monday, given that it is raining.
 
 **2E3.** Which of the expressions below correspond to the statement: *the probability that it is Monday,  
 given that it is raining*?  
-**(1)** Pr(Monday\|rain)  
-(2) Pr(rain\|Monday)  
-(3) Pr(rain\|Monday) Pr(Monday)  
-**(4)** Pr(rain\|Monday) Pr(Monday)/ Pr(rain)  
-(5) Pr(Monday\|rain) Pr(rain)/ Pr(Monday)
-  
+**(1)** Pr(Monday\|rain)
+
+\(2\) Pr(rain\|Monday)
+
+\(3\) Pr(rain\|Monday) Pr(Monday)  
+**(4)** Pr(rain\|Monday) Pr(Monday)/ Pr(rain)
+
+\(5\) Pr(Monday\|rain) Pr(rain)/ Pr(Monday)
+
 **Answer:**
 
 **(1)** Pr(Monday\|rain)
@@ -156,9 +164,133 @@ Pr(Monday\|rain) = Pr(rain\|Monday) \* Pr(Monday) / Pr(rain) **(4)**
 so I imagine de Finetti wanted us to shout this statement. What he meant is that probability is a device for describing uncertainty from the perspective of an observer with limited knowledge; it has no  
 objective reality. Discuss the globe tossing example from the chapter, in light of this statement. What  
 does it mean to say "the probability of water is 0.7"?
-  
+
+**2M1.** Recall the globe tossing model from the chapter. Compute and plot the grid approximate  
+posterior distribution for each of the following sets of observations. In each case, assume a uniform  
+prior for p.
+
+\(1\) W, W, W
+
+\(2\) W, W, W, L
+
+\(3\) L, W, W, L, W, W, W
+
+**Answers:**
+
+**(1) W, W, W**
+
+```{r}
+# define grid
+p_grid <- seq( from=0 , to=1 , length.out=20 )
+
+# define prior
+prior <- rep( 1 , 20 )
+
+# compute likelihood at each value in grid
+W <- 3
+L <- 0
+
+likelihood <- dbinom( W , size=W+L, prob=p_grid )
+
+# compute product of likelihood and prior
+unstd.posterior <- likelihood * prior
+
+# standardize the posterior, so it sums to 1
+posterior <- unstd.posterior / sum(unstd.posterior)
 
 
+plot( p_grid , posterior  , type="b" ,
+      xlab="probability of water" , ylab="posterior probability" )
+mtext( "20 points" )
+```
 
-  
+**(2) W, W, W, L**
 
+```{r}
+# define grid
+p_grid <- seq( from=0 , to=1 , length.out=20 )
+
+# define prior
+prior <- rep( 1 , 20 )
+
+# compute likelihood at each value in grid
+W <- 3
+L <- 1
+
+likelihood <- dbinom( W , size=W+L, prob=p_grid )
+
+# compute product of likelihood and prior
+unstd.posterior <- likelihood * prior
+
+# standardize the posterior, so it sums to 1
+posterior <- unstd.posterior / sum(unstd.posterior)
+
+
+plot( p_grid , posterior  , type="b" ,
+      xlab="probability of water" , ylab="posterior probability" )
+mtext( "20 points" )
+```
+
+**(3) L, W, W, L, W, W, W**
+
+```{r}
+# define grid
+p_grid <- seq( from=0 , to=1 , length.out=30 )
+
+# define prior
+prior <- rep( 1 , 30 )
+
+# compute likelihood at each value in grid
+W <- 5
+L <- 2
+
+likelihood <- dbinom( W , size=W+L, prob=p_grid )
+
+# compute product of likelihood and prior
+unstd.posterior <- likelihood * prior
+
+# standardize the posterior, so it sums to 1
+posterior <- unstd.posterior / sum(unstd.posterior)
+
+
+plot( p_grid , posterior  , type="b" ,
+      xlab="probability of water" , ylab="posterior probability" )
+mtext( "30 points" )
+```
+
+**2M2.** Now assume a prior for p that is equal to zero when p \< 0.5 and is a positive constant when  
+p ≥ 0.5. Again compute and plot the grid approximate posterior distribution for each of the sets of  
+observations in the problem just above.
+
+```{r}
+# define grid
+p_grid <- seq( from=0 , to=1 , length.out=30 )
+
+# define prior
+# prior <- rep( 1 , 20 )
+prior <- ifelse( p_grid < 0.5 , 0 , 1 )
+# prior <- dbinom(1, size = 2, prob = p_grid)
+# prior <- exp( -5*abs( p_grid - 0.5 ) )
+
+# compute likelihood at each value in grid
+likelihood1 <- dbinom( 3 , size=3, prob=p_grid )
+likelihood2 <- dbinom( 3 , size=4, prob=p_grid )
+likelihood3 <- dbinom( 5 , size=7, prob=p_grid )
+
+# compute product of likelihood and prior
+unstd.posterior1 <- likelihood1 * prior
+unstd.posterior2 <- likelihood2 * prior
+unstd.posterior3 <- likelihood3 * prior
+
+# standardize the posterior, so it sums to 1
+posterior1 <- unstd.posterior1 / sum(unstd.posterior1)
+posterior2 <- unstd.posterior2 / sum(unstd.posterior2)
+posterior3 <- unstd.posterior3 / sum(unstd.posterior3)
+
+par(mfrow = c(3,1))
+
+plot( p_grid , posterior1  , type="b")
+plot( p_grid , posterior2  , type="b")
+plot( p_grid , posterior3  , type="b")
+
+```
